What's New
==========

v0.0.5
------

 * keep focus on project after refresh.
 * keep focus on task after refresh.
 * added support of tasks with deleted status.
 * added urgency column.
 * implemented the cancel button of the task panel.
 * added menu.
 * restore position of vertical/horizaton spliters.
 * added creation date, due, id, uuid, urgency, and start date in the
   list of tasks.
 * popup menu to filter columns of the table of tasks.

v0.0.4
------

 * fixed i18n support.
 * added --version and --help options.
 * added manpage.
 * popup error dialog when .taskrc does not exist.
 * added --debug.
 * added taskwarrior version checking (supported version are 2.2.0 and 2.0.0).
 * added support for taskwarrior 2.2.0 (avoid confirmation query).
 * added window position and size restore.
 * added tasks sort column/order restore.
 * fixed error message displayed when a note does not exist.
 * new task dialog allow to set description and priority.
 * added project table to filter the list of tasks.
 * added application icon.
 * added remove task button.

v0.0.3
------

 * fixed window close to terminate the application.
 * added README.
 * generated HTML version of README and NEWS files.
 * added fr translation and i18n support.

v0.0.2
------

 * added refresh keyboard shortcut (ALT-r).
 * added new task keyboard shortcut (ALT-n).
 * renamed gtask to ptask.

v0.0.1
------

 * Initial release.