@@ -367,6 +367,11 @@ added creation date, due, id, uuid, urgency, and start date in the
 popup menu to filter columns of the table of tasks.
 </p>
 </li>
+<li>
+<p>
+allow to change the directory containing the notes.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -512,7 +517,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-10 08:57:18 CET
+Last updated 2014-01-21 09:21:30 CET
 </div>
 </div>
 </body>
