@@ -14,6 +14,7 @@ v0.0.5
  * added creation date, due, id, uuid, urgency, and start date in the
    list of tasks.
  * popup menu to filter columns of the table of tasks.
+ * allow to change the directory containing the notes.
 
 v0.0.4
 ------
